--- a/procurement-resources.html
+++ b/procurement-resources.html
@@ -13,7 +13,7 @@
 </script>
 
   <meta charset="utf-8">
-  <title>DCAF Online</title>
+  <title>DCAF Online - Procurement Resources</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -81,7 +81,7 @@
             <ul>
                 <li><a href="digital-procurement.html#background">Background</a></li>
                 <li><a href="procurement-resources.html">Resources</a></li>
-                <Li><a href="procurement-providers.html">Recognised Providers</a></li>
+                <Li><a href="procurement-providers.html">Credentialed Providers</a></li>
            </ul>  
           </ul>
         </li>
@@ -101,12 +101,26 @@
 <!-- Business Need-->
 <section class="grey-bk" id="resources">
     <div class="container text-left text white"> <!--business case for digital-->   
-       <h2>Procurement resources</h2>        
-        <p>Resources to assist service providers will be available soon.
-        </p>
+       <h2>Procurement resources</h2>
+       <h3>Semantic</h3>   
+       <ul>     
+        <li><a href="Resources/DigitalProcurement/DBC/CoreInvoice-1-0.html" class="text-info" target="_blank">Core Invoice (based on the Digital Business Council Model)</a></li>
+        <li><a href="Resources/DigitalProcurement/DBC/ApplicationResponse-1-0.html"class="text-info" target="_blank">Application Repsonse (based on the Digital Business Council Model)</a></li>
+        <li><a href="https://www.oasis-open.org/committees/sc_home.php?wg_abbrev=ubl-australia"class="text-info" target="_blank">UBL Australian Localisation Subcommittee</a></li>
+       </ul>
+       <h3>Technical</h3>
+       <ul>     
+          <li><a href="Resources/DigitalProcurement/DCAF Access Point Criteria V1.0.pdf" class="text-info" target="_blank">DCAF Access Point Criteria</a></li>
+          <li><a href="Resources/DigitalProcurement/DCAF DCP Criteria V1.0.pdf"class="text-info" target="_blank">DCAF Digital Capability Publisher Criteria </a></li>
+         </ul
             <br>
-            <p> Please send email to <span class="obfuscate">moc.enilnofacd@ofni</span> should you require further information
-
+            <br>
+            <p> The latest DCAFONline website terms of use and privacy policy, subject to change from time to time, can be found at:
+              <br>
+            <a href="Resources/DigitalProcurement/DCAFOnline Terms of use and Privacy Policy V1.0.pdf"class="text-info" target="_blank">DCAFOnline Terms and Conditions of use and Privacy Policvy</a></li>
+          </p>
+            <br>
+            <p> Should you require further information please send email to  <span class="obfuscate">moc.enilnofacd@ofni</span> 
               <div id="particles-js"></div> 
 
           </div> <!-- container-->
