--- a/B2BE.html
+++ b/B2BE.html
@@ -14,7 +14,7 @@
 
 
   <meta charset="utf-8">
-  <title>DCAF Online</title>
+  <title>DCAF Online - B2BE</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -80,7 +80,7 @@
             <ul>
                 <li><a href="digital-procurement.html#background">Background</a></li>
                 <li><a href="procurement-resources.html">Resources</a></li>
-                <Li><a href="procurement-providers.html">Recognised Providers</a></li>
+                <Li><a href="procurement-providers.html">Credentialed Providers</a></li>
            </ul>  
           </ul>
         </li>
