--- a/procurement-providers.html
+++ b/procurement-providers.html
@@ -13,7 +13,7 @@
 </script>
 
   <meta charset="utf-8">
-  <title>DCAF Online</title>
+  <title>DCAF Online - Credentialed Providers</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -81,7 +81,7 @@
             <ul>
                 <li><a href="digital-procurement.html#background">Background</a></li>
                 <li><a href="procurement-resources.html">Resources</a></li>
-                <Li><a href="procurement-providers.html">Recognised Providers</a></li>
+                <Li><a href="procurement-providers.html">Credentialed Providers</a></li>
            </ul>  
           </ul>
         </li>
@@ -156,7 +156,7 @@
                     </tr>
                     </tbody>
                 </table>   
-
+                <a class="btn btn-full" href="procurement-resources.html">Resources</a>
               
           </div> <!-- container-->
   
